# PGenMap

./: .gitignore  README.md  config.py  pyproject.toml  run.sh
docs/: index.html  scientists.html
outputs/: analysis.json  network.json  report.md
src/: 01_discover.py  02_harvest.py  03_enrich.py  04_topics.py  05_network.py  06_analyze.py  07_figures.py  08_atlas.py  build_dashboard.py  build_db.py  crossref.py  dashboard_template.py  openalex.py
src/pgenmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
