[project]
name = "pgenmap"
version = "0.1.0"
description = "Mapping the evolution of population genetics (1985-2025) from bibliometric data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16",
    "duckdb>=1.1",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "bertopic>=0.16",
    "plotly>=5.24",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "rapidfuzz>=3.9",
]

[tool.uv]
# Pipeline is pinned to 3.12 so the numba/umap/hdbscan wheels resolve.
